@@ -10,6 +10,8 @@
     </parent>
 
     <artifactId>test-reporting</artifactId>
+    <packaging>pom</packaging>
+    <name>test-reporting</name>
 
     <properties>
         <code.coverage.project.folder>${basedir}/../</code.coverage.project.folder>
@@ -39,22 +41,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
                 <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                     <argLine>
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
                         -Dfile.encoding=UTF-8
+                        -Djdk.attach.allowAttachSelf=true
                     </argLine>
-                    <testFailureIgnore>false</testFailureIgnore>
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
+                    <systemPropertyVariables>
+                        <jdk.attach.allowAttachSelf>true</jdk.attach.allowAttachSelf>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${maven.jacoco.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>report-aggregate</id>
